# clipper2c-sys

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE.md  README.md  build.rs
.cargo/: config.toml
.github/workflows/: test.yml
clipper2c/: .gitignore  CMakeLists.txt  README.md
clipper2c/include/: clipper2c.h  types.h
clipper2c/src/: clipper2c.cpp  clipper64.cpp  clipperd.cpp  clipperoffset.cpp  conv.cpp  conv.h  polytree.cpp  rect.cpp  svg.cpp
src/: lib.rs  test.rs
