[package]
name = "clipper2c-sys"
version = "0.1.4"
authors = ["Fredrik Söderström <tirithen@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tirithen/clipper2c-sys"
documentation = "https://docs.rs/clipper2c-sys/"
description = "Exposing unsafe FFI for Clipper2 library for Rust."
keywords = ["polygon", "boolean", "clip", "clipper", "clipper2"]
categories = ["algorithms", "external-ffi-bindings"]

[features]
generate-bindings = ["bindgen"]
update-bindings = ["generate-bindings"]
serde = ["dep:serde"]

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
bindgen = { version = "0.69.4", optional = true }
cc = "1.0.94"
